Makes github logo visible and corrects height

--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -1,3 +1,7 @@
 .proj_img {
     width: 50%;
 }
+
+.site_icon {
+    height: 30px; 
+}
